[gd_scene load_steps=4 format=2]

[ext_resource path="res://HandCharacter/HandCharacter.gd" type="Script" id=1]
[ext_resource path="res://HandCharacter/hand.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[node name="HandCharacter" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="SlapArea" type="Area2D" parent="."]

[node name="SlapShape" type="CollisionPolygon2D" parent="SlapArea"]
position = Vector2( 3.36739, 10.8037 )
polygon = PoolVector2Array( -3.78831, -25.9867, -11.7859, -23.882, -12.0665, -14.6217, -17.8191, -14.0605, -17.2579, 1.23305, -13.6098, 4.31982, 7.43632, 4.17951, 10.944, 1.23305, 10.5231, -21.3565 )

[node name="Body" type="StaticBody2D" parent="."]
visible = false

[node name="BodyShape" type="CollisionShape2D" parent="Body"]
shape = SubResource( 2 )
